Fixed an issue with photobooth not showing if there were few photos in that category.

--- a/static/css/memoji.css
+++ b/static/css/memoji.css
@@ -35,9 +35,9 @@ body {
 #content {
     position: relative;
     
-    overflow-y: hidden;
+/*    overflow-y: hidden;
     overflow-x: hidden;
-    
+*/    
     width: 980px;
     
     padding: 10px;
